test/asm/macro-arg-recursion.err
error: macro-arg-recursion.asm(6) -> macro-arg-recursion.asm::m(2):
    Begun line continuation, but encountered character '2'
Assembly aborted with 1 error!
